--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 ---
 en:
   spree:
+    seller_account_email: "Seller Account Email (Seller email when using 3rd party credentials, otherwise leave blank)"
     paypal:
       already_refunded: "This payment has been refunded and no further action can be taken on it."
       transaction: "PayPal Transaction"
