Add german translation.
Fixes #75

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 en:
   paypal:
     already_refunded: "This payment has been refunded and no further action can be taken on it."
+    no_payment_via_admin_backend: "You cannot charge PayPal accounts through the admin backend at this time."
     transaction: "PayPal Transaction"
     payer_id: "Payer ID"
     transaction_id: "Transaction ID"
@@ -13,3 +14,7 @@ en:
     refund_unsuccessful: "PayPal refund unsuccessful"
     actions:
       refund: "Refund"
+    flash:
+      cancel: "Don't want to use PayPal? No problems."
+      connection_failed: "Could not connect to PayPal."
+      generic_error: "PayPal failed. %{reasons}"
