--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,6 +2,7 @@
 de:
   paypal:
     already_refunded: "Diese Zahlung wurde zurück erstattet und kann nicht weiter bearbeitet werden."
+    no_payment_via_admin_backend: "Sie können PayPal Konten über das Admin Backend nicht belasten."
     transaction: "PayPal Transaktion"
     payer_id: "Zahler ID"
     transaction_id: "Transaktions ID"
@@ -13,3 +14,7 @@ de:
     refund_unsuccessful: "PayPal Erstattung nicht erfolgreich"
     actions:
       refund: "Erstatten"
+    flash:
+      cancel: "Sie wollen PayPal doch nicht benutzen? Kein Problem."
+      connection_failed: "Verbindung zu Paypal nicht erfolgreich."
+      generic_error: "PayPal fehlgeschlagen. %{reasons}"
