Improve PayPal buttons.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 en:
   spree:
     paypal:
+      powered_by: "Secure checkout powered by"
       already_refunded: "This payment has been refunded and no further action can be taken on it."
       no_payment_via_admin_backend: "You cannot charge PayPal accounts through the admin backend at this time."
       transaction: "PayPal Transaction"
