--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,6 +2,7 @@
 de:
   spree:
     paypal:
+      powered_by: "Sicherer Checkout bereitgestellt von"
       already_refunded: "Diese Zahlung wurde zurück erstattet und kann nicht weiter bearbeitet werden."
       no_payment_via_admin_backend: "Sie können nicht aufgeladen PayPal-Konten über das Admin-Backend zu diesem Zeitpunkt."
       transaction: "PayPal Transaktion"
