--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -2,6 +2,7 @@
 pt:
   spree:
     paypal:
+      powered_by: "Pagamento seguro alimentado por"
       already_refunded: "Este pagamento já foi reembolsado pelo que nenhuma acção pode ser executada sobre este."
       no_payment_via_admin_backend: "Não é possível cobrar contas de PayPal através do administrador neste momento."
       transaction: "Transacção de PayPal"
